5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4005/executions/1745_3097.log
== TEST (2019-05-15 14:44:30) 
-- CODE:
x= int(input("posicao:"))
cont=0
soma=0
while(x !=0):
	if(x=1):
		soma=(soma+25)
		elif(x=2):
			soma=(soma+18)
		elif(x=3):
			soma=(soma+12)
		elif(x>=4 and x<=10):
			soma=(soma+14-x)
print(soma)
-- ERROR:
File "XXXX", line 5
    if(x=1):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:44:44) 
-- CODE:
x= int(input("posicao:"))
cont=0
soma=0
while(x !=0):
	if(x==1):
		soma=(soma+25)
		elif(x=2):
			soma=(soma+18)
		elif(x=3):
			soma=(soma+12)
		elif(x>=4 and x<=10):
			soma=(soma+14-x)
print(soma)
-- ERROR:
File "XXXX", line 7
    elif(x=2):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:45:00) 
-- CODE:
x= int(input("posicao:"))
cont=0
soma=0
while(x !=0):
	if(x==1):
		soma=(soma+25)
		elif(x==2):
			soma=(soma+18)
		elif(x==3):
			soma=(soma+12)
		elif(x>==4 and x<==10):
			soma=(soma+14-x)
print(soma)
-- ERROR:
File "XXXX", line 7
    elif(x==2):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:45:16) 
-- CODE:
x= int(input("posicao:"))
cont=0
soma=0
while(x !=0):
	if(x==1):
		soma==(soma+25)
		elif(x==2):
			soma=(soma+18)
		elif(x==3):
			soma=(soma+12)
		elif(x>==4 and x<==10):
			soma=(soma+14-x)
print(soma)
-- ERROR:
File "XXXX", line 7
    elif(x==2):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:45:24) 
-- CODE:
x= int(input("posicao:"))
cont=0
soma=0
while(x !=0):
	if(x==1):
		soma=soma+25
		elif(x==2):
			soma=(soma+18)
		elif(x==3):
			soma=(soma+12)
		elif(x>==4 and x<==10):
			soma=(soma+14-x)
print(soma)
-- ERROR:
File "XXXX", line 7
    elif(x==2):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:45:31) 
-- CODE:
x= int(input("posicao:"))
cont=0
soma=0
while(x !=0):
	if(x==1):
		soma=soma+25
	elif(x==2):
			soma=(soma+18)
		elif(x==3):
			soma=(soma+12)
		elif(x>==4 and x<==10):
			soma=(soma+14-x)
print(soma)
-- ERROR:
File "XXXX", line 9
    elif(x==3):
              ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:45:43) 
-- CODE:
x= int(input("posicao:"))
cont=0
soma=0
while(x !=0):
	if(x==1):
		soma=soma+25
	elif(x==2):
		soma=(soma+18)
	elif(x==3):
		soma=(soma+12)
	elif(x>==4 and x<==10):
		soma=(soma+14-x)
print(soma)
-- ERROR:
File "XXXX", line 11
    elif(x>==4 and x<==10):
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:46:04) 
-- CODE:
x= int(input("posicao:"))
cont=0
soma=0
while(x !=0):
	if(x==1):
		soma=soma+25
	elif(x==2):
		soma=(soma+18)
	elif(x==3):
		soma=(soma+12)
	elif(x >= 4 and x <= 10):
		soma=(soma+14-x)
print(soma)
-- ERROR:
File "XXXX", line 11
    elif(x>==4 and x<==10):
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:46:39) 
-- CODE:
x= int(input("posicao:"))
cont=0
soma=0
while(x !=0):
	if(x==1):
		soma=soma+25
	elif(x==2):
		soma=(soma+18)
	elif(x==3):
		soma=(soma+12)
	elif(x >= 4 and x <= 10):
		soma=(soma+14-x)
print(soma)
-- ERROR:
File "XXXX", line 11
    elif(x>==4 and x<==10):
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:46:48) 
-- CODE:
x= int(input("posicao:"))
cont=0
soma=0
while(x !=0):
	if(x==1):
		soma=soma+25
	elif(x==2):
		soma=(soma+18)
	elif(x==3):
		soma=(soma+12)
	elif(x >= 4 and x <= 10):
		soma=(soma+14-x)
print(soma)
-- ERROR:
File "XXXX", line 11
    elif(x>==4 and x<==10):
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:47:29) 
-- CODE:
x= int(input("posicao:"))
cont=0
soma=0
while(x > 0):
	if(x==1):
		soma=soma+25
	elif(x==2):
		soma=(soma+18)
	elif(x==3):
		soma=(soma+12)
	elif(x >= 4 and x <= 10):
		soma=(soma+14-x)
print(soma)
-- ERROR:
File "XXXX", line 11
    elif(x>==4 and x<==10):
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:47:33) 
-- CODE:
x= int(input("posicao:"))
cont=0
soma=0
while(x > 0):
	if(x==1):
		soma=soma+25
	elif(x==2):
		soma=(soma+18)
	elif(x==3):
		soma=(soma+12)
	elif(x >= 4 and x <= 10):
		soma=(soma+14-x)
print(soma)
-- ERROR:
File "XXXX", line 11
    elif(x>==4 and x<==10):
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:48:20) 
-- CODE:
x= int(input("posicao:"))
cont=0
soma=0
while(x > 0):
	if(x==1):
		soma=soma+25
		elif(x==2):
			soma=(soma+18)
		elif(x==3):
			soma=(soma+12)
		elif(x >= 4 and x <= 10):
			soma=(soma+14-x)
print(soma)
-- ERROR:
File "XXXX", line 7
    elif(x==2):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:48:37) 
-- CODE:
x= int(input("posicao:"))
cont=0
soma=0
while(x > 0):
	if(x==1):
		soma=soma+25
	elif(x==2):
		soma=(soma+18)
	elif(x==3):
		soma=(soma+12)
	elif(x >= 4 and x <= 10):
		soma=(soma+14-x)
print(soma)
-- ERROR:
File "XXXX", line 7
    elif(x==2):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:48:50) 
-- CODE:
x= int(input("posicao:"))
cont=0
soma=0
while(x > 0):
	if(x==1):
		soma=soma+25
	elif(x==2):
		soma=(soma+18)
	elif(x==3):
		soma=(soma+12)
	elif(x >= 4 and x <= 10):
		soma=(soma+14-x)
   print(soma)
-- ERROR:
File "XXXX", line 13
    print(soma)
              ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:49:14) 
-- CODE:
x= int(input("posicao:"))
cont=0
soma=0
while(x > 0):
	if(x==1):
		soma=soma+25
	elif(x==2):
		soma=(soma+18)
	elif(x==3):
		soma=(soma+12)
	elif(x >= 4 and x <= 10):
		soma=(soma+14-x)
print(soma)
-- ERROR:
File "XXXX", line 13
    print(soma)
              ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:49:44) 
-- CODE:
x= int(input("posicao:"))
cont=0
soma=0
while(x > 0):
	if(x==1):
		soma=soma+25
	elif(x==2):
		soma=(soma+18)
	elif(x==3):
		soma=(soma+12)
	elif(x >= 4 and x <= 10):
		soma=(soma+14-x)
		else:
			x=0
print(soma)
-- ERROR:
File "XXXX", line 13
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:49:53) 
-- CODE:
x= int(input("posicao:"))
cont=0
soma=0
while(x > 0):
	if(x==1):
		soma=soma+25
	elif(x==2):
		soma=(soma+18)
	elif(x==3):
		soma=(soma+12)
	elif(x >= 4 and x <= 10):
		soma=(soma+14-x)
	else:
			x=0
print(soma)
-- ERROR:
File "XXXX", line 13
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:50:04) 
-- CODE:
x= int(input("posicao:"))
cont=0
soma=0
while(x > 0):
	if(x==1):
		soma=soma+25
	elif(x==2):
		soma=(soma+18)
	elif(x==3):
		soma=(soma+12)
	elif(x >= 4 and x <= 10):
		soma=(soma+14-x)
	else:
			x=0
print(soma)
-- ERROR:
File "XXXX", line 13
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:50:46) 
-- CODE:
x= int(input("posicao:"))
cont=0
soma=0
while(x > 0):
	if(x==1):
		soma=soma+25
	elif(x==2):
		soma=(soma+18)
	elif(x==3):
		soma=(soma+12)
	elif(x >= 4 and x <= 10):
		soma=(soma+14-x)
	else:
			x=0
print(soma)
-- ERROR:
File "XXXX", line 13
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:51:10) 
-- CODE:
x= int(input("posicao:"))
cont=0
soma=0
while(x > 0):
	if(x==1):
		soma=soma+25
	elif(x==2):
		soma=(soma+18)
	elif(x==3):
		soma=(soma+12)
	elif(x >= 4 and x <= 10):
		soma=(soma+14-x)
	else:
		x=0
print(soma)
-- ERROR:
File "XXXX", line 13
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:51:49) 
-- CODE:
x= int(input("posicao:"))
cont=0
soma=0
while(x > 0 and x!=0):
	if(x==1):
		soma=soma+25
	elif(x==2):
		soma=(soma+18)
	elif(x==3):
		soma=(soma+12)
	elif(x >= 4 and x <= 10):
		soma=(soma+14-x)
	else:
		x=0
print(soma)
-- ERROR:
File "XXXX", line 13
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:53:34) 
-- CODE:
x= int(input("posicao:"))
cont=0
soma=0
while((x > 0) and (x!=0)):
	if(x==1):
		soma=soma+25
	elif(x==2):
		soma=(soma+18)
	elif(x==3):
		soma=(soma+12)
	elif(x >= 4 and x <= 10):
		soma=(soma+14-x)
	else:
		x=0
	
print(soma+soma)
-- ERROR:
File "XXXX", line 13
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:54:55) 
-- CODE:
x= int(input("posicao:"))
cont=0
soma=0
while((x > 0) and (x!=0)):
	if(x==1 and x!=0):
		soma=soma+25
	elif(x==2 and x!=0):
		soma=(soma+18)
	elif(x==3):
		soma=(soma+12)
	elif(x >= 4 and x <= 10 and x!=0):
		soma=(soma+14-x)
	else:
		x=0
	
print(soma+soma)
-- ERROR:
File "XXXX", line 13
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:57:32) 
-- CODE:
x= int(input("posicao:"))
cont=0
soma=0
while((x > 0) and (x!=0)):
	if(x==1 and x!=0):
		soma=soma+25
	elif(x==2 and x!=0):
		soma=(soma+18)
	elif(x==3):
		soma=(soma+12)
	elif(x >= 4 and x <= 10 and x!=0):
		soma=(soma+14-x)
	else:
		x=0
a = soma+soma
print(a)
-- ERROR:
File "XXXX", line 13
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:58:08) 
-- CODE:
x= int(input("posicao:"))
cont=0
soma=0
while x>0:
	if(x==1 and x!=0):
		soma=soma+25
	elif(x==2 and x!=0):
		soma=(soma+18)
	elif(x==3):
		soma=(soma+12)
	elif(x >= 4 and x <= 10 and x!=0):
		soma=(soma+14-x)
	else:
		x=0
a = soma+soma
print(a)
-- ERROR:
File "XXXX", line 13
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:59:05) 
-- CODE:
x= int(input("posicao:"))
cont=0
soma=0
while (0 != x):
	if(x==1 and x!=0):
		soma=soma+25
	elif(x==2 and x!=0):
		soma=(soma+18)
	elif(x==3):
		soma=(soma+12)
	elif(x >= 4 and x <= 10 and x!=0):
		soma=(soma+14-x)
	else:
		x=0
a = soma+soma
print(a)
-- ERROR:
File "XXXX", line 13
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:59:16) 
-- CODE:
x= int(input("posicao:"))
cont=0
soma=0
while (0=!x):
	if(x==1 and x!=0):
		soma=soma+25
	elif(x==2 and x!=0):
		soma=(soma+18)
	elif(x==3):
		soma=(soma+12)
	elif(x >= 4 and x <= 10 and x!=0):
		soma=(soma+14-x)
	else:
		x=0
a = soma+soma
print(a)
-- ERROR:
File "XXXX", line 4
    while (0=!x):
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 14:59:23) 
-- CODE:
x= int(input("posicao:"))
cont=0
soma=0
while (0=!x):
	if(x==1 and x!=0):
		soma=soma+25
	elif(x==2 and x!=0):
		soma=(soma+18)
	elif(x==3):
		soma=(soma+12)
	elif(x >= 4 and x <= 10 and x!=0):
		soma=(soma+14-x)
	else:
		x=0
a = soma+soma
print(a)
-- EXECUTION TIME:
1.27486
-- ERROR:
  File "/home/codebench/codes/1745/3097/main.py", line 4
    while (0=!x):
            ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:02:01) 
-- CODE:
x= int(input("posicao:"))
cont=0
soma=0
a=0
while (x != 0):
	if(x==1 and x!=0):
		a=soma+25
	elif(x==2 and x!=0):
		a=(soma+18)
	elif(x==3):
		a=(soma+12)
	elif(x >= 4 and x <= 10 and x!=0):
		a=(soma+14-x)
	else:
		x=0
b= soma+soma
print(b)
-- ERROR:
File "XXXX", line 4
    while (0=!x):
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:03:46) 
-- CODE:
x= int(input("posicao:"))
cont=0
soma=0
a=0
while (x != 0):
	if(x==1 and x!=0):
		a=soma+25
		elif(x==2 and x!=0):
			a=(soma+18)
		elif(x==3):
			a=(soma+12)
		elif(x >= 4 and x <= 10 and x!=0):
			a=(soma+14-x)
	else:
		x=0
b= soma+soma
print(b)
-- ERROR:
File "XXXX", line 8
    elif(x==2 and x!=0):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:04:02) 
-- CODE:
x= int(input("posicao:"))
cont=0
soma=0
a=0
while (x != 0):
	if(x==1 and x!=0):
		a=soma+25
	elif(x==2 and x!=0):
			a=(soma+18)
	elif(x==3):
			a=(soma+12)
	elif(x >= 4 and x <= 10 and x!=0):
			a=(soma+14-x)
	else:
		x=0
b= soma+soma
print(b)
-- ERROR:
File "XXXX", line 8
    elif(x==2 and x!=0):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:04:46) 
-- CODE:
x= int(input("posicao:"))
cont=0
soma=0
a=0
while (a != 0):
	if(x==1 and x!=0):
		a=soma+25
	elif(x==2 and x!=0):
			a=(soma+18)
	elif(x==3):
			a=(soma+12)
	elif(x >= 4 and x <= 10 and x!=0):
			a=(soma+14-x)
	else:
		x=0
b= soma+soma
print(b)
-- ERROR:
File "XXXX", line 8
    elif(x==2 and x!=0):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:04:51) 
-- CODE:
x= int(input("posicao:"))
cont=0
soma=0
a=0
while (a != 0):
	if(x==1 and x!=0):
		a=soma+25
	elif(x==2 and x!=0):
			a=(soma+18)
	elif(x==3):
			a=(soma+12)
	elif(x >= 4 and x <= 10 and x!=0):
			a=(soma+14-x)
	else:
		x=0
b= soma+soma
print(b)
-- ERROR:
File "XXXX", line 8
    elif(x==2 and x!=0):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 15:04:55) 
-- CODE:
x= int(input("posicao:"))
cont=0
soma=0
a=0
while (a != 0):
	if(x==1 and x!=0):
		a=soma+25
	elif(x==2 and x!=0):
			a=(soma+18)
	elif(x==3):
			a=(soma+12)
	elif(x >= 4 and x <= 10 and x!=0):
			a=(soma+14-x)
	else:
		x=0
b= soma+soma
print(b)
-- EXECUTION TIME:
2.24418
-- TEST CASE 1:
---- input:
1
2
3
4
5
6
7
8
9
10
0
---- correct output:
104
---- user output:
0
-- TEST CASE 2:
---- input:
1
1
1
-20
-1
2
2
2
3
3
3
0
---- correct output:
165
---- user output:
posicao:0
-- TEST CASE 3:
---- input:
20
20
20
19
19
19
18
18
18
0
---- correct output:
0
---- user output:
posicao:0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:05:26) 
-- CODE:
x= int(input("posicao:"))
cont=0
soma=0

while (a != 0):
	if(x==1 and x!=0):
		a=soma+25
	elif(x==2 and x!=0):
			a=(soma+18)
	elif(x==3):
			a=(soma+12)
	elif(x >= 4 and x <= 10 and x!=0):
			a=(soma+14-x)
	else:
		x=0
b= soma+soma
print(b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    while (a != 0):
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:10:35) 
-- CODE:
x= int(input("posicao:"))
cont=0
soma=0
a=0
while (x != 0):
	x=int(input("posicao:"))
	if(x==1 and x!=0):
		a=soma+25
	elif(x==2 and x!=0):
			a=(soma+18)
	elif(x==3):
			a=(soma+12)
	elif(x >= 4 and x <= 10 and x!=0):
			a=(soma+14-x)
	else:
		x=0

print(b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 18, in <module>
    print(b)
NameError: name 'b' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:11:06) 
-- CODE:
x= int(input("posicao:"))
cont=0
soma=0
a=0
while (x != 0):
	x=int(input("posicao:"))
	if(x==1 and x!=0):
		a=soma+25
	elif(x==2 and x!=0):
			a=(soma+18)
	elif(x==3):
			a=(soma+12)
	elif(x >= 4 and x <= 10 and x!=0):
			a=(soma+14-x)
	else:
		x=0

print(a)
-- OUTPUT:
4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 15:11:11) 
-- CODE:
x= int(input("posicao:"))
cont=0
soma=0
a=0
while (x != 0):
	x=int(input("posicao:"))
	if(x==1 and x!=0):
		a=soma+25
	elif(x==2 and x!=0):
			a=(soma+18)
	elif(x==3):
			a=(soma+12)
	elif(x >= 4 and x <= 10 and x!=0):
			a=(soma+14-x)
	else:
		x=0

print(a)
-- EXECUTION TIME:
3.0059
-- ERROR:
  File "/home/codebench/codes/1745/3097/main.py", line 18
    print(a)lse:
              ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 15:11:26) 
-- CODE:
x= int(input("posicao:"))
cont=0
soma=0
a=0
while (x != 0):
	x=int(input("posicao:"))
	if(x==1 and x!=0):
		a=soma+25
	elif(x==2 and x!=0):
			a=(soma+18)
	elif(x==3):
			a=(soma+12)
	elif(x >= 4 and x <= 10 and x!=0):
			a=(soma+14-x)
	else:
		x=0

print(a)
-- EXECUTION TIME:
2.07055
-- TEST CASE 1:
---- input:
1
2
3
4
5
6
7
8
9
10
0
---- correct output:
104
---- user output:
4
-- TEST CASE 2:
---- input:
1
1
1
-20
-1
2
2
2
3
3
3
0
---- correct output:
165
---- user output:
25
-- TEST CASE 3:
---- input:
20
20
20
19
19
19
18
18
18
0
---- correct output:
0
---- user output:
0
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:11:39) 
-- CODE:
x= int(input("posicao:"))
cont=0
soma=0
a=0
while (x != 0):
	x=int(input("posicao:"))
	if(x==1 and x!=0):
		a=soma+25
	elif(x==2 and x!=0):
			a=(soma+18)
	elif(x==3):
			a=(soma+12)
	elif(x >= 4 and x <= 10 and x!=0):
			a=(soma+14-x)
	else:
		x=0

print(a)
-- OUTPUT:
4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:13:12) 
-- CODE:
x= int(input("posicao:"))
cont=0
soma=0

while (x != 0):
	x=int(input("posicao:"))
	if(x==1 and x!=0):
		soma=soma+25
	elif(x==2 and x!=0):
		soma=soma+18
	elif(x==3):
		soma=(soma+12)
	elif(x >= 4 and x <= 10 and x!=0):
		soma=(soma+14-x)
	else:
		x=0

print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 18, in <module>
    print(a)
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 15:13:14) 
-- CODE:
x= int(input("posicao:"))
cont=0
soma=0

while (x != 0):
	x=int(input("posicao:"))
	if(x==1 and x!=0):
		soma=soma+25
	elif(x==2 and x!=0):
		soma=soma+18
	elif(x==3):
		soma=(soma+12)
	elif(x >= 4 and x <= 10 and x!=0):
		soma=(soma+14-x)
	else:
		x=0

print(a)
-- EXECUTION TIME:
1.97945
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1745/3097/main.py", line 18, in <module>
    print(a)
NameError: name 'a' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 15:13:31) 
-- CODE:
x= int(input("posicao:"))
cont=0
soma=0

while (x != 0):
	x=int(input("posicao:"))
	if(x==1 and x!=0):
		soma=soma+25
	elif(x==2 and x!=0):
		soma=soma+18
	elif(x==3):
		soma=(soma+12)
	elif(x >= 4 and x <= 10 and x!=0):
		soma=(soma+14-x)
	else:
		x=0

print(soma)
-- EXECUTION TIME:
2.76836
-- TEST CASE 1:
---- input:
1
2
3
4
5
6
7
8
9
10
0
---- correct output:
104
---- user output:
79
-- TEST CASE 2:
---- input:
1
1
1
-20
-1
2
2
2
3
3
3
0
---- correct output:
165
---- user output:
50
-- TEST CASE 3:
---- input:
20
20
20
19
19
19
18
18
18
0
---- correct output:
0
---- user output:
0
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:13:36) 
-- CODE:
x= int(input("posicao:"))

soma=0

while (x != 0):
	x=int(input("posicao:"))
	if(x==1 and x!=0):
		soma=soma+25
	elif(x==2 and x!=0):
		soma=soma+18
	elif(x==3):
		soma=(soma+12)
	elif(x >= 4 and x <= 10 and x!=0):
		soma=(soma+14-x)
	else:
		x=0

print(soma)
-- OUTPUT:
79
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 15:14:32) 
-- CODE:
x= int(input("posicao:"))

soma=0

while (x != 0):
	x=int(input("posicao:"))
	if(x==1 and x!=0):
		soma=soma+25
	elif(x==2 and x!=0):
		soma=soma+18
	elif(x==3):
		soma=(soma+12)
	elif(x >= 4 and x <= 10 and x!=0):
		soma=(soma+14-x)
	else:
		x=0

print(soma)
-- EXECUTION TIME:
3.18459
-- TEST CASE 1:
---- input:
1
2
3
4
5
6
7
8
9
10
0
---- correct output:
104
---- user output:
79
-- TEST CASE 2:
---- input:
1
1
1
-20
-1
2
2
2
3
3
3
0
---- correct output:
165
---- user output:
50
-- TEST CASE 3:
---- input:
20
20
20
19
19
19
18
18
18
0
---- correct output:
0
---- user output:
posicao:posicao:0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:15:36) 
-- CODE:
x= int(input("posicao:"))

soma=0

while (x != 0):
	x=int(input("posicao:"))
	if(x==1 and x!=0):
		soma=soma+25
	elif(x==2 and x!=0):
		soma=soma+18
	elif(x==3):
		soma=(soma+12)
	elif(x >= 4 and x <= 10 and x!=0):
		soma=(soma+14-x)
	else:
		x=0

print(soma)
-- OUTPUT:
79
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:17:47) 
-- CODE:
x= int(input("posicao:"))

soma=0

while (x != 0):
	x=int(input("repita a posicao:"))
	if(x==1 and x!=0):
		soma=soma+25
	elif(x==2 and x!=0):
		soma=soma+18
	elif(x==3):
		soma=(soma+12)
	elif(x >= 4 and x <= 10 and x!=0):
		soma=(soma+14-x)
	else:
		x=0

print(soma)
-- OUTPUT:
79
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 15:18:13) 
-- CODE:
x= int(input("posicao:"))

soma=0

while (x != 0):
	x=int(input("repita a posicao:"))
	if(x==1 and x!=0):
		soma=soma+25
	elif(x==2 and x!=0):
		soma=soma+18
	elif(x==3):
		soma=(soma+12)
	elif(x >= 4 and x <= 10 and x!=0):
		soma=(soma+14-x)
	else:
		x=0

print(soma)
-- EXECUTION TIME:
1.88587
-- TEST CASE 1:
---- input:
1
2
3
4
5
6
7
8
9
10
0
---- correct output:
104
---- user output:
79
-- TEST CASE 2:
---- input:
1
1
1
-20
-1
2
2
2
3
3
3
0
---- correct output:
165
---- user output:
50
-- TEST CASE 3:
---- input:
20
20
20
19
19
19
18
18
18
0
---- correct output:
0
---- user output:
0
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:18:18) 
-- CODE:


while (x != 0):
	x=int(input("repita a posicao:"))
	if(x==1 and x!=0):
		soma=soma+25
	elif(x==2 and x!=0):
		soma=soma+18
	elif(x==3):
		soma=(soma+12)
	elif(x >= 4 and x <= 10 and x!=0):
		soma=(soma+14-x)
	else:
		x=0

print(soma)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    while (x != 0):
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:18:30) 
-- CODE:

x=x
while (x != 0):
	x=int(input("repita a posicao:"))
	if(x==1 and x!=0):
		soma=soma+25
	elif(x==2 and x!=0):
		soma=soma+18
	elif(x==3):
		soma=(soma+12)
	elif(x >= 4 and x <= 10 and x!=0):
		soma=(soma+14-x)
	else:
		x=0

print(soma)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    x=x
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:19:12) 
-- CODE:
x= int(input("posicao:"))

soma=0

while (x != 0):
	
	if(x==1 and x!=0):
		soma=soma+25
	elif(x==2 and x!=0):
		soma=soma+18
	elif(x==3):
		soma=(soma+12)
	elif(x >= 4 and x <= 10 and x!=0):
		soma=(soma+14-x)
	else:
		x=0

print(soma)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    x=x
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:19:16) 
-- CODE:
x= int(input("posicao:"))

soma=0

while (x != 0):
	
	if(x==1 and x!=0):
		soma=soma+25
	elif(x==2 and x!=0):
		soma=soma+18
	elif(x==3):
		soma=(soma+12)
	elif(x >= 4 and x <= 10 and x!=0):
		soma=(soma+14-x)
	else:
		x=0

print(soma)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    x=x
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:19:36) 
-- CODE:
x= int(input("posicao:"))

soma=0

while (x != 0):
	
if(x==1 and x!=0):
		soma=soma+25
	elif(x==2 and x!=0):
		soma=soma+18
	elif(x==3):
		soma=(soma+12)
	elif(x >= 4 and x <= 10 and x!=0):
		soma=(soma+14-x)
	else:
		x=0

print(soma)
-- ERROR:
File "XXXX", line 7
    if(x==1 and x!=0):
     ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:19:59) 
-- CODE:
x= int(input("posicao:"))

soma=0

while (x != 0):
	x=x
   if(x==1 and x!=0):
		soma=soma+25
	elif(x==2 and x!=0):
		soma=soma+18
	elif(x==3):
		soma=(soma+12)
	elif(x >= 4 and x <= 10 and x!=0):
		soma=(soma+14-x)
	else:
		x=0

print(soma)
-- ERROR:
File "XXXX", line 7
    if(x==1 and x!=0):
                     ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:20:29) 
-- CODE:
x= int(input("posicao:"))

soma=0
while (x != 0):
	x==x
	if(x==1 and x!=0):
		soma=soma+25
	elif(x==2 and x!=0):
		soma=soma+18
	elif(x==3):
		soma=(soma+12)
	elif(x >= 4 and x <= 10 and x!=0):
		soma=(soma+14-x)
	else:
		x=0

print(soma)
-- ERROR:
File "XXXX", line 7
    if(x==1 and x!=0):
                     ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:23:11) 
-- CODE:
x= int(input("posicao:"))

soma=0

while (x != 0):
	x=|int(input("repita a posicao:"))|
	if(x==1 and x!=0):
		soma=soma+25
	elif(x==2 and x!=0):
		soma=soma+18
	elif(x==3):
		soma=(soma+12)
	elif(x >= 4 and x <= 10 and x!=0):
		soma=(soma+14-x)
	else:
		x=0

print(soma)
-- ERROR:
File "XXXX", line 6
    x=|int(input())|
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:23:27) 
-- CODE:
x= int(input("posicao:"))

soma=0

while (x != 0):
	|x|=int(input("repita a posicao:"))
	if(x==1 and x!=0):
		soma=soma+25
	elif(x==2 and x!=0):
		soma=soma+18
	elif(x==3):
		soma=(soma+12)
	elif(x >= 4 and x <= 10 and x!=0):
		soma=(soma+14-x)
	else:
		x=0

print(soma)
-- ERROR:
File "XXXX", line 6
    |x|=int(input())
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:25:36) 
-- CODE:
x= int(input("posicao:"))

soma=0

while (x != 0):
	x=int(input("repita a posicao:"))
	if(x<0):
		x=x*(-1)
	if(x==1 and x!=0):
		soma=soma+25
	elif(x==2 and x!=0):
		soma=soma+18
	elif(x==3):
		soma=(soma+12)
	elif(x >= 4 and x <= 10 and x!=0):
		soma=(soma+14-x)
	else:
		x=0

print(soma)
-- OUTPUT:
79
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:25:56) 
-- CODE:
x= int(input("posicao:"))

soma=0

while (x != 0):
	x=int(input("repita a posicao:"))
	if(x<0):
		x=x*(-1)
	if(x==1 and x!=0):
		soma=soma+25
	elif(x==2 and x!=0):
		soma=soma+18
	elif(x==3):
		soma=(soma+12)
	elif(x >= 4 and x <= 10 and x!=0):
		soma=(soma+14-x)
	else:
		x=0

print(soma)
-- OUTPUT:
79
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 15:25:57) 
-- CODE:
x= int(input("posicao:"))

soma=0

while (x != 0):
	x=int(input("repita a posicao:"))
	if(x<0):
		x=x*(-1)
	if(x==1 and x!=0):
		soma=soma+25
	elif(x==2 and x!=0):
		soma=soma+18
	elif(x==3):
		soma=(soma+12)
	elif(x >= 4 and x <= 10 and x!=0):
		soma=(soma+14-x)
	else:
		x=0

print(soma)
-- EXECUTION TIME:
2.05165
-- TEST CASE 1:
---- input:
1
2
3
4
5
6
7
8
9
10
0
---- correct output:
104
---- user output:
79
-- TEST CASE 2:
---- input:
1
1
1
-20
-1
2
2
2
3
3
3
0
---- correct output:
165
---- user output:
50
-- TEST CASE 3:
---- input:
20
20
20
19
19
19
18
18
18
0
---- correct output:
0
---- user output:
posicao:repita a posicao:0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:26:29) 
-- CODE:
x= int(input("posicao:"))

soma=0

while (x != 0):
	x=int(input("repita a posicao:"))
	if(x<0):
		x=x*(-1)
	if(x==1 and x!=0):
		soma=soma+25
	elif(x==2 and x!=0):
		soma=soma+18
	elif(x==3):
		soma=(soma+12)
	elif(x >= 4 and x <= 10 and x!=0):
		soma=(soma+14-x)
	else:
		x=0

print(soma)
-- OUTPUT:
79
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:26:39) 
-- CODE:
x= int(input("posicao:"))

soma=0

while (x != 0):
	x=int(input("repita a posicao:"))
	if(x<0):
		x=x*(-1)
	if(x==1 and x!=0):
		soma=soma+25
	elif(x==2 and x!=0):
		soma=soma+18
	elif(x==3):
		soma=(soma+12)
	elif(x >= 4 and x <= 10 and x!=0):
		soma=(soma+14-x)
	else:
		x=0

print(soma)
-- OUTPUT:
79
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:27:31) 
-- CODE:
x= int(input("posicao:"))

soma=0

while (x != 0):
	x=int(input("repita a posicao:"))
	if(x<0):
		x=x*(-1)
	if(x==1 and x!=0):
		soma=soma+25
	elif(x==2 and x!=0):
		soma=soma+18
	elif(x==3):
		soma=(soma+12)
	elif(x >= 4 and x <= 10 and x!=0):
		soma=(soma+14-x)
	else:
	

print(soma)
-- ERROR:
File "XXXX", line 20
    print(soma)
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 15:27:40) 
-- CODE:
x= int(input("posicao:"))

soma=0

while (x != 0):
	x=int(input("repita a posicao:"))
	if(x<0):
		x=x*(-1)
	if(x==1 and x!=0):
		soma=soma+25
	elif(x==2 and x!=0):
		soma=soma+18
	elif(x==3):
		soma=(soma+12)
	elif(x >= 4 and x <= 10 and x!=0):
		soma=(soma+14-x)
	else:
	

print(soma)
-- EXECUTION TIME:
1.97769
-- ERROR:
  File "/home/codebench/codes/1745/3097/main.py", line 20
    print(soma)
    ^
IndentationError: expected an indented block

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:27:41) 
-- CODE:
x= int(input("posicao:"))

soma=0

while (x != 0):
	x=int(input("repita a posicao:"))
	if(x<0):
		x=x*(-1)
	if(x==1 and x!=0):
		soma=soma+25
	elif(x==2 and x!=0):
		soma=soma+18
	elif(x==3):
		soma=(soma+12)
	elif(x >= 4 and x <= 10 and x!=0):
		soma=(soma+14-x)
	else:
	

print(soma)
-- ERROR:
File "XXXX", line 20
    print(soma)
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:27:42) 
-- CODE:
x= int(input("posicao:"))

soma=0

while (x != 0):
	x=int(input("repita a posicao:"))
	if(x<0):
		x=x*(-1)
	if(x==1 and x!=0):
		soma=soma+25
	elif(x==2 and x!=0):
		soma=soma+18
	elif(x==3):
		soma=(soma+12)
	elif(x >= 4 and x <= 10 and x!=0):
		soma=(soma+14-x)
	else:
print(soma)
-- ERROR:
File "XXXX", line 18
    print(soma)
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 15:27:44) 
-- CODE:
x= int(input("posicao:"))

soma=0

while (x != 0):
	x=int(input("repita a posicao:"))
	if(x<0):
		x=x*(-1)
	if(x==1 and x!=0):
		soma=soma+25
	elif(x==2 and x!=0):
		soma=soma+18
	elif(x==3):
		soma=(soma+12)
	elif(x >= 4 and x <= 10 and x!=0):
		soma=(soma+14-x)
	else:
	

print(soma)
-- EXECUTION TIME:
2.94257
-- ERROR:
  File "/home/codebench/codes/1745/3097/main.py", line 20
    print(soma)
    ^
IndentationError: expected an indented block

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:27:46) 
-- CODE:
x= int(input("posicao:"))

soma=0

while (x != 0):
	x=int(input("repita a posicao:"))
	if(x<0):
		x=x*(-1)
	if(x==1 and x!=0):
		soma=soma+25
	elif(x==2 and x!=0):
		soma=soma+18
	elif(x==3):
		soma=(soma+12)
	elif(x >= 4 and x <= 10 and x!=0):
		soma=(soma+14-x)
	else:
print(soma)
-- ERROR:
File "XXXX", line 18
    print(soma)
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 15:27:51) 
-- CODE:
x= int(input("posicao:"))

soma=0

while (x != 0):
	x=int(input("repita a posicao:"))
	if(x<0):
		x=x*(-1)
	if(x==1 and x!=0):
		soma=soma+25
	elif(x==2 and x!=0):
		soma=soma+18
	elif(x==3):
		soma=(soma+12)
	elif(x >= 4 and x <= 10 and x!=0):
		soma=(soma+14-x)
	else:
print(soma)
-- EXECUTION TIME:
1.88489
-- ERROR:
  File "/home/codebench/codes/1745/3097/main.py", line 18
    print(soma)
    ^
IndentationError: expected an indented block

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:28:01) 
-- CODE:
x= int(input("posicao:"))

soma=0

while (x != 0):
	x=int(input("repita a posicao:"))
	if(x<0):
		x=x*(-1)
	if(x==1 and x!=0):
		soma=soma+25
	elif(x==2 and x!=0):
		soma=soma+18
	elif(x==3):
		soma=(soma+12)
	elif(x >= 4 and x <= 10 and x!=0):
		soma=(soma+14-x)
	else:

print(soma)
-- ERROR:
File "XXXX", line 19
    print(soma)
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:29:01) 
-- CODE:
x= int(input("posicao:"))

soma=0

while (x != 0):
	x=int(input("repita a posicao:"))
	if(x<0):
		x=x*(-1)
	if(x==1 and x!=0):
		soma=soma+25
	elif(x==2 and x!=0):
		soma=soma+18
	elif(x==3):
		soma=(soma+12)
	elif(x >= 4 and x <= 10 and x!=0):
		soma=(soma+14-x)
	else:
       soma=-x+x
print(soma)
-- ERROR:
File "XXXX", line 18
    soma=-x+x
            ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:29:05) 
-- CODE:
x= int(input("posicao:"))

soma=0

while (x != 0):
	x=int(input("repita a posicao:"))
	if(x<0):
		x=x*(-1)
	if(x==1 and x!=0):
		soma=soma+25
	elif(x==2 and x!=0):
		soma=soma+18
	elif(x==3):
		soma=(soma+12)
	elif(x >= 4 and x <= 10 and x!=0):
		soma=(soma+14-x)
	else:
       soma=-x+x
print(soma)
-- ERROR:
File "XXXX", line 18
    soma=-x+x
            ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 15:29:11) 
-- CODE:
x= int(input("posicao:"))

soma=0

while (x != 0):
	x=int(input("repita a posicao:"))
	if(x<0):
		x=x*(-1)
	if(x==1 and x!=0):
		soma=soma+25
	elif(x==2 and x!=0):
		soma=soma+18
	elif(x==3):
		soma=(soma+12)
	elif(x >= 4 and x <= 10 and x!=0):
		soma=(soma+14-x)
	else:
       soma=-x+x
print(soma)
-- EXECUTION TIME:
2.35019
-- ERROR:
  File "/home/codebench/codes/1745/3097/main.py", line 18
    soma=-x+x
            ^
IndentationError: unindent does not match any outer indentation level

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:29:21) 
-- CODE:
x= int(input("posicao:"))

soma=0

while (x != 0):
	x=int(input("repita a posicao:"))
	if(x<0):
		x=x*(-1)
	if(x==1 and x!=0):
		soma=soma+25
	elif(x==2 and x!=0):
		soma=soma+18
	elif(x==3):
		soma=(soma+12)
	elif(x >= 4 and x <= 10 and x!=0):
		soma=(soma+14-x)
	else:
       soma=(-x)+x
print(soma)
-- ERROR:
File "XXXX", line 18
    soma=(-x)+x
              ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:29:25) 
-- CODE:
x= int(input("posicao:"))

soma=0

while (x != 0):
	x=int(input("repita a posicao:"))
	if(x<0):
		x=x*(-1)
	if(x==1 and x!=0):
		soma=soma+25
	elif(x==2 and x!=0):
		soma=soma+18
	elif(x==3):
		soma=(soma+12)
	elif(x >= 4 and x <= 10 and x!=0):
		soma=(soma+14-x)
	else:
       soma=(-x)+x
print(soma)
-- ERROR:
File "XXXX", line 18
    soma=(-x)+x
              ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 15:29:30) 
-- CODE:
x= int(input("posicao:"))

soma=0

while (x != 0):
	x=int(input("repita a posicao:"))
	if(x<0):
		x=x*(-1)
	if(x==1 and x!=0):
		soma=soma+25
	elif(x==2 and x!=0):
		soma=soma+18
	elif(x==3):
		soma=(soma+12)
	elif(x >= 4 and x <= 10 and x!=0):
		soma=(soma+14-x)
	else:
       soma=(-x)+x
print(soma)
-- EXECUTION TIME:
1.59823
-- ERROR:
  File "/home/codebench/codes/1745/3097/main.py", line 18
    soma=(-x)+x
              ^
IndentationError: unindent does not match any outer indentation level

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:30:50) 
-- CODE:
x= int(input("posicao:"))

soma=0

while (x != 0):
	x=int(input("repita a posicao:"))
	if(x<0):
		x=x*(-1)
	if(x==1 and x!=0):
		soma=soma+25
	elif(x==2 and x!=0):
		soma=soma+18
	elif(x==3):
		soma=(soma+12)
	elif(x >= 4 and x <= 10 and x!=0):
		soma=(soma+14-x)
	else:
       soma=x
print(soma)
-- ERROR:
File "XXXX", line 18
    soma=x
         ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:31:05) 
-- CODE:
x= int(input("posicao:"))

soma=0

while (x != 0):
	x=int(input("repita a posicao:"))
	if(x<0):
		x=x*(-1)
	if(x==1 and x!=0):
		soma=soma+25
	elif(x==2 and x!=0):
		soma=soma+18
	elif(x==3):
		soma=(soma+12)
	elif(x >= 4 and x <= 10 and x!=0):
		soma=(soma+14-x)
	else:
       soma=1
print(soma)
-- ERROR:
File "XXXX", line 18
    soma=1
         ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:31:20) 
-- CODE:
x= int(input("posicao:"))

soma=0

while (x != 0):
	x=int(input("repita a posicao:"))
	if(x<0):
		x=x*(-1)
	if(x==1 and x!=0):
		soma=soma+25
	elif(x==2 and x!=0):
		soma=soma+18
	elif(x==3):
		soma=(soma+12)
	elif(x >= 4 and x <= 10 and x!=0):
		soma=(soma+14-x)
	else:
	soma=1
print(soma)
-- ERROR:
File "XXXX", line 18
    soma=1
       ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:31:26) 
-- CODE:
x= int(input("posicao:"))

soma=0

while (x != 0):
	x=int(input("repita a posicao:"))
	if(x<0):
		x=x*(-1)
	if(x==1 and x!=0):
		soma=soma+25
	elif(x==2 and x!=0):
		soma=soma+18
	elif(x==3):
		soma=(soma+12)
	elif(x >= 4 and x <= 10 and x!=0):
		soma=(soma+14-x)
	else:
		soma=1
print(soma)
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:31:54) 
-- CODE:
x= int(input("tecle qualquer numero para iniciar:"))

soma=0

while (x != 0):
	x=int(input("repita a posicao:"))
	if(x<0):
		x=x*(-1)
	if(x==1 and x!=0):
		soma=soma+25
	elif(x==2 and x!=0):
		soma=soma+18
	elif(x==3):
		soma=(soma+12)
	elif(x >= 4 and x <= 10 and x!=0):
		soma=(soma+14-x)
	else:
		soma=1
print(soma)
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:32:08) 
-- CODE:
x= int(input("tecle qualquer numero para iniciar:"))

soma=0

while (x != 0):
	x=int(input("posicao:"))
	if(x<0):
		x=x*(-1)
	if(x==1 and x!=0):
		soma=soma+25
	elif(x==2 and x!=0):
		soma=soma+18
	elif(x==3):
		soma=(soma+12)
	elif(x >= 4 and x <= 10 and x!=0):
		soma=(soma+14-x)
	else:
		soma=1
print(soma)
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:32:39) 
-- CODE:
x= int(input("tecle qualquer numero para iniciar:"))

soma=0

while (x != 0):
	x=int(input("posicao:"))
	if(x<0):
		x=x*(-1)
	if(x==1 and x!=0):
		soma=soma+25
	elif(x==2 and x!=0):
		soma=soma+18
	elif(x==3):
		soma=(soma+12)
	elif(x >= 4 and x <= 10 and x!=0):
		soma=(soma+14-x)
	else:
		soma=soma+soma
print(soma)
-- OUTPUT:
158
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:33:00) 
-- CODE:
x= int(input("tecle qualquer numero para iniciar:"))

soma=0

while (x != 0):
	x=int(input("posicao:"))
	if(x<0):
		x=x*(-1)
	if(x==1 and x!=0):
		soma=soma+25
	elif(x==2 and x!=0):
		soma=soma+18
	elif(x==3):
		soma=(soma+12)
	elif(x >= 4 and x <= 10 and x!=0):
		soma=(soma+14-x)
	else:
		soma=soma+soma*2
		
print(soma)
-- OUTPUT:
237
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:33:15) 
-- CODE:
x= int(input("tecle qualquer numero para iniciar:"))

soma=0

while (x != 0):
	x=int(input("posicao:"))
	if(x<0):
		x=x*(-1)
	if(x==1 and x!=0):
		soma=soma+25
	elif(x==2 and x!=0):
		soma=soma+18
	elif(x==3):
		soma=(soma+12)
	elif(x >= 4 and x <= 10 and x!=0):
		soma=(soma+14-x)
	else:
		soma=soma+soma/2
		
print(soma)
-- OUTPUT:
118.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:33:38) 
-- CODE:
x= int(input("tecle qualquer numero para iniciar:"))

soma=0

while (x != 0):
	x=int(input("posicao:"))
	if(x<0):
		x=x*(-1)
	if(x==1 and x!=0):
		soma=soma+25
	elif(x==2 and x!=0):
		soma=soma+18
	elif(x==3):
		soma=(soma+12)
	elif(x >= 4 and x <= 10 and x!=0):
		soma=(soma+14-x)
	else:
		soma=soma
		
print(soma)
-- OUTPUT:
79
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 15:34:18) 
-- CODE:
x= int(input("tecle qualquer numero para iniciar:"))

soma=0

while (x != 0):
	x=int(input("posicao:"))
	if(x<0):
		x=x*(-1)
	if(x==1 and x!=0):
		soma=soma+25
	elif(x==2 and x!=0):
		soma=soma+18
	elif(x==3):
		soma=(soma+12)
	elif(x >= 4 and x <= 10 and x!=0):
		soma=(soma+14-x)
	else:
		soma=soma
		
print(soma)
-- EXECUTION TIME:
2.89162
-- TEST CASE 1:
---- input:
1
2
3
4
5
6
7
8
9
10
0
---- correct output:
104
---- user output:
79
-- TEST CASE 2:
---- input:
1
1
1
-20
-1
2
2
2
3
3
3
0
---- correct output:
165
---- user output:
165
-- TEST CASE 3:
---- input:
20
20
20
19
19
19
18
18
18
0
---- correct output:
0
---- user output:
0
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:34:19) 
-- CODE:
x= int(input("tecle qualquer numero para iniciar:"))

soma=0

while (x != 0):
	x=int(input("posicao:"))
	if(x<0):
		x=x*(-1)
	if(x==1 and x!=0):
		soma=soma+25
	elif(x==2 and x!=0):
		soma=soma+18
	elif(x==3):
		soma=(soma+12)
	elif(x >= 4 and x <= 10 and x!=0):
		soma=(soma+14-x)
	else:
		1
		
print(soma)
-- OUTPUT:
79
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 15:34:37) 
-- CODE:
x= int(input("tecle qualquer numero para iniciar:"))

soma=0

while (x != 0):
	x=int(input("posicao:"))
	if(x<0):
		x=x*(-1)
	if(x==1 and x!=0):
		soma=soma+25
	elif(x==2 and x!=0):
		soma=soma+18
	elif(x==3):
		soma=(soma+12)
	elif(x >= 4 and x <= 10 and x!=0):
		soma=(soma+14-x)
	else:
		1
		
print(soma)
-- EXECUTION TIME:
2.41395
-- TEST CASE 1:
---- input:
1
2
3
4
5
6
7
8
9
10
0
---- correct output:
104
---- user output:
79
-- TEST CASE 2:
---- input:
1
1
1
-20
-1
2
2
2
3
3
3
0
---- correct output:
165
---- user output:
165
-- TEST CASE 3:
---- input:
20
20
20
19
19
19
18
18
18
0
---- correct output:
0
---- user output:
0
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:35:39) 
-- CODE:
x= int(input("tecle qualquer numero para iniciar:"))

soma=0

while (x != 0):
	x=int(input("posicao:"))
	if(x<0):
		x=x*(-1)
	if(x==1 and x!=0):
		soma=soma+25
	elif(x==2 and x!=0):
		soma=soma+18
	elif(x==3):
		soma=(soma+12)
	elif(x >= 4 and x <= 10 and x!=0):
		soma=(soma+14-x)
	else:
		1
		
print(soma)
-- OUTPUT:
79
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 15:36:06) 
-- CODE:
x= int(input("posicao:"))
cont=0
soma=0
while(x !=0):
	if(x==1):
		soma=soma+25
	elif(x==2):
		soma=(soma+18)
	elif(x==3):
		soma=(soma+12)
	elif(x >= 4 and x <= 10):
		soma=(soma+14-x)
print(soma)
-- EXECUTION TIME:
2960.32
-- ERROR:
Killed

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:36:56) 
-- CODE:
x= int(input("tecle qualquer numero para iniciar:"))

soma=0

while (x != 0):
	x=int(input("posicao:"))
	if(x<0):
		x=x*(-1)
	if(x==1 and x!=0):
		soma=soma+25
	elif(x==2 and x!=0):
		soma=soma+18
	elif(x==3):
		soma=(soma+12)
	elif(x >= 4 and x <= 10 and x!=0):
		soma=(+14-x)
	else:
		1
		
print(soma)
-- OUTPUT:
4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:37:01) 
-- CODE:
x= int(input("tecle qualquer numero para iniciar:"))

soma=0

while (x != 0):
	x=int(input("posicao:"))
	if(x<0):
		x=x*(-1)
	if(x==1 and x!=0):
		soma=soma+25
	elif(x==2 and x!=0):
		soma=soma+18
	elif(x==3):
		soma=(soma+12)
	elif(x >= 4 and x <= 10 and x!=0):
		soma=(14-x)
	else:
		1
		
print(soma)
-- OUTPUT:
4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 15:38:05) 
-- CODE:
x= int(input("posicao:"))
cont=0
soma=0
while(x !=0):
	if(x==1):
		soma=soma+25
	elif(x==2):
		soma=(soma+18)
	elif(x==3):
		soma=(soma+12)
	elif(x >= 4 and x <= 10):
		soma=(soma+14-x)
print(soma)
-- EXECUTION TIME:
3075.12
-- ERROR:
Killed

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 15:38:07) 
-- CODE:
x= int(input("posicao:"))
cont=0
soma=0
while(x !=0):
	if(x==1):
		soma=soma+25
	elif(x==2):
		soma=(soma+18)
	elif(x==3):
		soma=(soma+12)
	elif(x >= 4 and x <= 10):
		soma=(soma+14-x)
print(soma)
-- EXECUTION TIME:
3073.78
-- ERROR:
Killed

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:38:18) 
-- CODE:
x= int(input("tecle qualquer numero para iniciar:"))

soma=0

while (x != 0):
	x=int(input("posicao:"))
	if(x<0):
		x=x*(-1)
	if(x==1 and x!=0):
		soma=soma+25
	elif(x==2 and x!=0):
		soma=soma+18
	elif(x==3):
		soma=(soma+12)
	elif(x >= 4 and x <= 10 and x!=0):
		soma=(soma+14-x)
	else:
		14
		
print(soma)
-- OUTPUT:
79
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 15:38:22) 
-- CODE:
x= int(input("tecle qualquer numero para iniciar:"))

soma=0

while (x != 0):
	x=int(input("posicao:"))
	if(x<0):
		x=x*(-1)
	if(x==1 and x!=0):
		soma=soma+25
	elif(x==2 and x!=0):
		soma=soma+18
	elif(x==3):
		soma=(soma+12)
	elif(x >= 4 and x <= 10 and x!=0):
		soma=(soma+14-x)
	else:
		14
		
print(soma)
-- EXECUTION TIME:
1.19034
-- TEST CASE 1:
---- input:
1
2
3
4
5
6
7
8
9
10
0
---- correct output:
104
---- user output:
tecle qualquer numero para iniciar:posicao:posicao:posicao:posicao:posicao:posicao:posicao:posicao:posicao:posicao:79
-- TEST CASE 2:
---- input:
1
1
1
-20
-1
2
2
2
3
3
3
0
---- correct output:
165
---- user output:
tecle qualquer numero para iniciar:posicao:posicao:posicao:posicao:posicao:posicao:posicao:posicao:posicao:posicao:posicao:165
-- TEST CASE 3:
---- input:
20
20
20
19
19
19
18
18
18
0
---- correct output:
0
---- user output:
tecle qualquer numero para iniciar:posicao:posicao:posicao:posicao:posicao:posicao:posicao:posicao:posicao:0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 15:39:04) 
-- CODE:
x= int(input("posicao:"))
cont=0
soma=0
while(x > 0):
	if(x==1):
		soma=soma+25
	elif(x==2):
		soma=(soma+18)
	elif(x==3):
		soma=(soma+12)
	elif(x >= 4 and x <= 10):
		soma=(soma+14-x)
print(soma)
-- EXECUTION TIME:
3076.96
-- ERROR:
Killed

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 15:39:05) 
-- CODE:
x= int(input("posicao:"))
cont=0
soma=0
while(x > 0):
	if(x==1):
		soma=soma+25
	elif(x==2):
		soma=(soma+18)
	elif(x==3):
		soma=(soma+12)
	elif(x >= 4 and x <= 10):
		soma=(soma+14-x)
print(soma)
-- EXECUTION TIME:
3091.52
-- ERROR:
Killed

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:39:44) 
-- CODE:
x= int(input("tecle qualquer numero para iniciar:"))

soma=0

while (x != 0):
	x=int(input("posicao:"))
	if(x<0):
		x=x*(-1)
	if(x==1 and x!=0):
		soma=soma+25
	elif(x==2 and x!=0):
		soma=soma+18
	elif(x==3):
		soma=(soma+12)
	elif(x >= 4 and x <= 10 and x!=0):
		soma=(soma+14-x)
	else:
		14
		
print(soma)
-- OUTPUT:
79
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:41:35) 
-- CODE:
x= int(input("tecle qualquer numero para iniciar:"))

soma=0

while (x != 0):
	x=int(input("posicao:"))
	if(x<0):
		x=x*(-1)
	if(x==1 and x!=0):
		soma=soma+25
	elif(x==2 and x!=0):
		soma=soma+18
	elif(x==3):
		soma=(soma+12)
	elif(x >= 4 and x <= 10 and x!=0):
		soma=(soma+14-x)
	else:
		14
		
print(soma-soma*0,17)
-- OUTPUT:
79 17
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 15:42:04) 
-- CODE:
x= int(input("posicao:"))
cont=0
soma=0
while(x > 0):
	if(x==1):
		soma=soma+25
	elif(x==2):
		soma=(soma+18)
	elif(x==3):
		soma=(soma+12)
	elif(x >= 4 and x <= 10):
		soma=(soma+14-x)
	else:
			x=0
print(soma)
-- EXECUTION TIME:
3115.14
-- ERROR:
Killed

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:42:41) 
-- CODE:
x= int(input("tecle qualquer numero para iniciar:"))

soma=0

while (x != 0):
	x=int(input("posicao:"))
	if(x<0):
		x=x*(-1)
	if(x==1 and x!=0):
		soma=soma+25
	elif(x==2 and x!=0):
		soma=soma+18
	elif(x==3):
		soma=(soma+12)
	elif(x >= 4 and x <= 10 and x!=0):
		soma=(soma+14-x)
	else:
		14
		
print(soma-soma*0.17)
-- OUTPUT:
65.57
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:43:11) 
-- CODE:
x= int(input("tecle qualquer numero para iniciar:"))

soma=0

while (x != 0):
	x=int(input("posicao:"))
	if(x<0):
		x=x*(-1)
	if(x==1 and x!=0):
		soma=soma+25
	elif(x==2 and x!=0):
		soma=soma+18
	elif(x==3):
		soma=(soma+12)
	elif(x >= 4 and x <= 10 and x!=0):
		soma=(soma+14-x)
	else:
		14
		
print(soma-soma*1.7)
-- OUTPUT:
-55.29999999999998
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:44:12) 
-- CODE:
x= int(input("tecle qualquer numero para iniciar:"))

soma=0

while (x != 0):
	x=int(input("posicao:"))
	if(x<0):
		x=x*(-1)
	if(x==1 and x!=0):
		soma=soma+25
	elif(x==2 and x!=0):
		soma=soma+18
	elif(x==3):
		soma=(soma+12)
	elif(x >= 4 and x <= 10 and x!=0):
		soma=(soma+14-x)
	else:
		14
		
print(soma-soma*0.20)
-- OUTPUT:
63.2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:44:22) 
-- CODE:
x= int(input("tecle qualquer numero para iniciar:"))

soma=0

while (x != 0):
	x=int(input("posicao:"))
	if(x<0):
		x=x*(-1)
	if(x==1 and x!=0):
		soma=soma+25
	elif(x==2 and x!=0):
		soma=soma+18
	elif(x==3):
		soma=(soma+12)
	elif(x >= 4 and x <= 10 and x!=0):
		soma=(soma+14-x)
	else:
		14
		
print(soma-soma*0.20)
-- OUTPUT:
63.2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:44:41) 
-- CODE:
x= int(input("tecle qualquer numero para iniciar:"))

soma=0

while (x != 0):
	x=int(input("posicao:"))
	if(x<0):
		x=x*(-1)
	if(x==1 and x!=0):
		soma=soma+25
	elif(x==2 and x!=0):
		soma=soma+18
	elif(x==3):
		soma=(soma+12)
	elif(x >= 4 and x <= 10 and x!=0):
		soma=(soma+14-x)
	else:
		14
		
print(soma-soma*0.25)
-- OUTPUT:
59.25
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:44:49) 
-- CODE:
x= int(input("tecle qualquer numero para iniciar:"))

soma=0

while (x != 0):
	x=int(input("posicao:"))
	if(x<0):
		x=x*(-1)
	if(x==1 and x!=0):
		soma=soma+25
	elif(x==2 and x!=0):
		soma=soma+18
	elif(x==3):
		soma=(soma+12)
	elif(x >= 4 and x <= 10 and x!=0):
		soma=(soma+14-x)
	else:
		14
		
print(soma-soma*0.25)
-- OUTPUT:
59.25
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 15:45:02) 
-- CODE:
x= int(input("posicao:"))
cont=0
soma=0
while((x > 0) and (x!=0)):
	if(x==1 and x!=0):
		soma=soma+25
	elif(x==2 and x!=0):
		soma=(soma+18)
	elif(x==3):
		soma=(soma+12)
	elif(x >= 4 and x <= 10 and x!=0):
		soma=(soma+14-x)
	else:
		x=0
	
print(soma+soma)
-- EXECUTION TIME:
2996.77
-- ERROR:
Killed

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 15:45:10) 
-- CODE:
x= int(input("tecle qualquer numero para iniciar:"))

soma=0

while (x != 0):
	x=int(input("posicao:"))
	if(x<0):
		x=x*(-1)
	if(x==1 and x!=0):
		soma=soma+25
	elif(x==2 and x!=0):
		soma=soma+18
	elif(x==3):
		soma=(soma+12)
	elif(x >= 4 and x <= 10 and x!=0):
		soma=(soma+14-x)
	else:
		14
		
print(soma-soma*0.24)
-- EXECUTION TIME:
0.652024
-- TEST CASE 1:
---- input:
1
2
3
4
5
6
7
8
9
10
0
---- correct output:
104
---- user output:
60.04
-- TEST CASE 2:
---- input:
1
1
1
-20
-1
2
2
2
3
3
3
0
---- correct output:
165
---- user output:
125.4
-- TEST CASE 3:
---- input:
20
20
20
19
19
19
18
18
18
0
---- correct output:
0
---- user output:
0.0
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:45:12) 
-- CODE:
x= int(input("tecle qualquer numero para iniciar:"))

soma=0

while (x != 0):
	x=int(input("posicao:"))
	if(x<0):
		x=x*(-1)
	if(x==1 and x!=0):
		soma=soma+25
	elif(x==2 and x!=0):
		soma=soma+18
	elif(x==3):
		soma=(soma+12)
	elif(x >= 4 and x <= 10 and x!=0):
		soma=(soma+14-x)
	else:
		14
		
print(soma-soma*0.24)
-- OUTPUT:
60.04
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:45:40) 
-- CODE:
x= int(input("tecle qualquer numero para iniciar:"))

soma=0

while (x != 0):
	x=int(input("posicao:"))
	if(x<0):
		x=x*(-1)
	if(x==1 and x!=0):
		soma=soma+25
	elif(x==2 and x!=0):
		soma=soma+18
	elif(x==3):
		soma=(soma+12)
	elif(x >= 4 and x <= 10 and x!=0):
		soma=(soma+14-x)
	else:
		14
		
print(soma-soma*0.246)
-- OUTPUT:
59.566
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:46:10) 
-- CODE:
x= int(input("tecle qualquer numero para iniciar:"))

soma=0

while (x != 0):
	x=int(input("posicao:"))
	if(x<0):
		x=x*(-1)
	if(x==1 and x!=0):
		soma=soma+25
	elif(x==2 and x!=0):
		soma=soma+18
	elif(x==3):
		soma=(soma+12)
	elif(x >= 4 and x <= 10 and x!=0):
		soma=(soma+14-x)
	else:
		14
		
print(round(soma-soma*0.24),1)
-- OUTPUT:
60 1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:46:13) 
-- CODE:
x= int(input("tecle qualquer numero para iniciar:"))

soma=0

while (x != 0):
	x=int(input("posicao:"))
	if(x<0):
		x=x*(-1)
	if(x==1 and x!=0):
		soma=soma+25
	elif(x==2 and x!=0):
		soma=soma+18
	elif(x==3):
		soma=(soma+12)
	elif(x >= 4 and x <= 10 and x!=0):
		soma=(soma+14-x)
	else:
		14
		
print(round(soma-soma*0.24),1)
-- OUTPUT:
60 1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 15:46:14) 
-- CODE:
x= int(input("tecle qualquer numero para iniciar:"))

soma=0

while (x != 0):
	x=int(input("posicao:"))
	if(x<0):
		x=x*(-1)
	if(x==1 and x!=0):
		soma=soma+25
	elif(x==2 and x!=0):
		soma=soma+18
	elif(x==3):
		soma=(soma+12)
	elif(x >= 4 and x <= 10 and x!=0):
		soma=(soma+14-x)
	else:
		14
		
print(round(soma-soma*0.24),1)
-- EXECUTION TIME:
0.639744
-- TEST CASE 1:
---- input:
1
2
3
4
5
6
7
8
9
10
0
---- correct output:
104
---- user output:
60 1
-- TEST CASE 2:
---- input:
1
1
1
-20
-1
2
2
2
3
3
3
0
---- correct output:
165
---- user output:
tecle qualquer numero para iniciar:posicao:posicao:posicao:posicao:posicao:posicao:posicao:posicao:posicao:posicao:posicao:125 1
-- TEST CASE 3:
---- input:
20
20
20
19
19
19
18
18
18
0
---- correct output:
0
---- user output:
tecle qualquer numero para iniciar:posicao:posicao:posicao:posicao:posicao:posicao:posicao:posicao:posicao:0 1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:46:42) 
-- CODE:
x= int(input("tecle qualquer numero para iniciar:"))

soma=0

while (x != 0):
	x=int(input("posicao:"))
	if(x<0):
		x=x*(-1)
	if(x==1 and x!=0):
		soma=soma+25
	elif(x==2 and x!=0):
		soma=soma+18
	elif(x==3):
		soma=(soma+12)
	elif(x >= 4 and x <= 10 and x!=0):
		soma=(soma+14-x)
	else:
		14
		
print(round(soma-soma*0.24),)
-- OUTPUT:
60
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 15:46:43) 
-- CODE:
x= int(input("tecle qualquer numero para iniciar:"))

soma=0

while (x != 0):
	x=int(input("posicao:"))
	if(x<0):
		x=x*(-1)
	if(x==1 and x!=0):
		soma=soma+25
	elif(x==2 and x!=0):
		soma=soma+18
	elif(x==3):
		soma=(soma+12)
	elif(x >= 4 and x <= 10 and x!=0):
		soma=(soma+14-x)
	else:
		14
		
print(round(soma-soma*0.24),)
-- EXECUTION TIME:
0.653999
-- TEST CASE 1:
---- input:
1
2
3
4
5
6
7
8
9
10
0
---- correct output:
104
---- user output:
60
-- TEST CASE 2:
---- input:
1
1
1
-20
-1
2
2
2
3
3
3
0
---- correct output:
165
---- user output:
125
-- TEST CASE 3:
---- input:
20
20
20
19
19
19
18
18
18
0
---- correct output:
0
---- user output:
tecle qualquer numero para iniciar:posicao:posicao:posicao:posicao:posicao:posicao:posicao:posicao:posicao:0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 15:47:02) 
-- CODE:
x= int(input("posicao:"))
cont=0
soma=0
while (0 != x):
	if(x==1 and x!=0):
		soma=soma+25
	elif(x==2 and x!=0):
		soma=(soma+18)
	elif(x==3):
		soma=(soma+12)
	elif(x >= 4 and x <= 10 and x!=0):
		soma=(soma+14-x)
	else:
		x=0
a = soma+soma
print(a)
-- EXECUTION TIME:
2874.1
-- ERROR:
Killed

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 15:47:07) 
-- CODE:
x= int(input("tecle qualquer numero para iniciar:"))

soma=0

while (x != 0):
	x=int(input("posicao:"))
	if(x<0):
		x=x*(-1)
	if(x==1 and x!=0):
		soma=soma+25
	elif(x==2 and x!=0):
		soma=soma+18
	elif(x==3):
		soma=(soma+12)
	elif(x >= 4 and x <= 10 and x!=0):
		soma=(soma+14-x)
	else:
		14
		
print(round(soma-soma*0.24),)
-- EXECUTION TIME:
0.583282
-- TEST CASE 1:
---- input:
1
2
3
4
5
6
7
8
9
10
0
---- correct output:
104
---- user output:
60
-- TEST CASE 2:
---- input:
1
1
1
-20
-1
2
2
2
3
3
3
0
---- correct output:
165
---- user output:
125
-- TEST CASE 3:
---- input:
20
20
20
19
19
19
18
18
18
0
---- correct output:
0
---- user output:
0
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:47:24) 
-- CODE:
x= int(input("tecle qualquer numero para iniciar:"))

soma=0

while (x != 0):
	x=int(input("posicao:"))
	if(x<0):
		x=x*(-1)
	if(x==1 and x!=0):
		soma=soma+25
	elif(x==2 and x!=0):
		soma=soma+18
	elif(x==3):
		soma=(soma+12)
	elif(x >= 4 and x <= 10 and x!=0):
		soma=(soma+14-x)
	else:
		14
		
print(round(soma-soma*0.24),)
-- OUTPUT:
60
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 15:48:02) 
-- CODE:
x= int(input("posicao:"))
cont=0
soma=0
a=0
while (x != 0):
	if(x==1 and x!=0):
		a=soma+25
	elif(x==2 and x!=0):
			a=(soma+18)
	elif(x==3):
			a=(soma+12)
	elif(x >= 4 and x <= 10 and x!=0):
			a=(soma+14-x)
	else:
		x=0
b= soma+soma
print(b)
-- EXECUTION TIME:
2631.67
-- ERROR:
Killed

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:48:09) 
-- CODE:
x= int(input("tecle qualquer numero para iniciar:"))

soma=0

while (x != 0):
	x=int(input("posicao:"))
	if(x<0):
		x=x*(-1)
	if(x==1 and x!=0):
		soma=soma+25
	elif(x==2 and x!=0):
		soma=soma+18
	elif(x==3):
		soma=(soma+12)
	elif(x >= 4 and x <= 10 and x!=0):
		soma=(soma+14-x)
	else:
		14
		
print(int(soma-soma*0.24))
-- OUTPUT:
60
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:48:33) 
-- CODE:
x= int(input("tecle qualquer numero para iniciar:"))

soma=0

while (x != 0):
	x=int(input("posicao:"))
	if(x<0):
		x=x*(-1)
	if(x==1 and x!=0):
		soma=soma+25
	elif(x==2 and x!=0):
		soma=soma+18
	elif(x==3):
		soma=(soma+12)
	elif(x >= 4 and x <= 10 and x!=0):
		soma=(soma+14-x)
	else:
		14
		
print(int(soma-soma*0.24))
-- OUTPUT:
60
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:49:02) 
-- CODE:
x= int(input("tecle qualquer numero para iniciar:"))

soma=0

while (x != 0):
	x=int(input("posicao:"))
	if(x<0):
		x=x*(-1)
	if(x==1 and x!=0):
		soma=soma+25
	elif(x==2 and x!=0):
		soma=soma+18
	elif(x==3):
		soma=(soma+12)
	elif(x >= 4 and x <= 10 and x!=0):
		soma=(soma+14-x)
	else:
		14
		
print(int(soma-soma*0.24),)
-- OUTPUT:
60
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:49:35) 
-- CODE:
x= int(input("tecle qualquer numero para iniciar:"))

soma=0

while (x != 0):
	x=int(input("posicao:"))
	if(x<0):
		x=x*(-1)
	if(x==1 and x!=0):
		soma=soma+25
	elif(x==2 and x!=0):
		soma=soma+18
	elif(x==3):
		soma=(soma+12)
	elif(x >= 4 and x <= 10 and x!=0):
		soma=(soma+14-x)
	else:
		14
		
print(round(soma-soma*0.24),)
-- OUTPUT:
60
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 15:50:02) 
-- CODE:
x= int(input("posicao:"))

soma=0
while (x != 0):
	x==x
	if(x==1 and x!=0):
		soma=soma+25
	elif(x==2 and x!=0):
		soma=soma+18
	elif(x==3):
		soma=(soma+12)
	elif(x >= 4 and x <= 10 and x!=0):
		soma=(soma+14-x)
	else:
		x=0

print(soma)
-- EXECUTION TIME:
1760.14
-- ERROR:
Killed

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 15:50:02) 
-- CODE:
x= int(input("tecle qualquer numero para iniciar:"))

soma=0

while (x != 0):
	x=int(input("posicao:"))
	if(x<0):
		x=x*(-1)
	if(x==1 and x!=0):
		soma=soma+25
	elif(x==2 and x!=0):
		soma=soma+18
	elif(x==3):
		soma=(soma+12)
	elif(x >= 4 and x <= 10 and x!=0):
		soma=(soma+14-x)
	else:
		14
		
print(round(soma-soma*0.24))
-- EXECUTION TIME:
0.193361
-- TEST CASE 1:
---- input:
1
2
3
4
5
6
7
8
9
10
0
---- correct output:
104
---- user output:
60
-- TEST CASE 2:
---- input:
1
1
1
-20
-1
2
2
2
3
3
3
0
---- correct output:
165
---- user output:
125
-- TEST CASE 3:
---- input:
20
20
20
19
19
19
18
18
18
0
---- correct output:
0
---- user output:
0
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
